--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-  "name": "base-wawebjs-bot",
-  "version": "1.0.0",
-  "description": "Is simple whatsapp bots use library whatsapp-web.js",
+  "name": "whatsapp-bot-waweb",
+  "version": "1.3.0",
+  "description": "Bot whatsapp menggunakan whatsapp-web.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "ronzz": "pm2 start index.js --name ronzz && pm2 save && pm2 logs"
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DEFF-Y/waweb-deff.git"
+  },
+  "keywords": [
+    "whatsapp-bot"
+  ],
+  "author": "DEFF",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DEFF-Y/waweb-deff/issues"
   },
   "nodemonConfig": {
     "ignore": [
       "**/.wwebjs_auth/**",
       "**/node_modules/**",
-      "**/function/**",
+      "**/options/**",
       "package.json"
     ]
   },
   "directories": {
     "function": "function"
   },
-  "author": "Ronzz YT",
-  "license": "ISC",
+  "homepage": "https://github.com/DEFF-Y/waweb-deff#readme",
   "dependencies": {
+    "@bochilteam/scraper": "^4.0.22-alpha.0",
     "@xct007/frieren-scraper": "^0.0.2",
     "axios": "^1.3.6",
-    "chalk": "^4.1.2",
     "child_process": "^1.0.2",
     "file-type": "^18.3.0",
     "fs": "^0.0.1-security",
     "human-readable": "^0.2.1",
-    "millify": "^5.0.1",
     "mime-types": "^2.1.35",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "^0.5.43",
     "node-fetch": "^3.3.1",
     "performance-now": "^2.1.0",
     "qrcode-terminal": "^0.12.0",
     "syntax-error": "^1.4.0",
     "util": "^0.12.5",
-    "whatsapp-web.js": "github:Ronzz-YT/whatsapp-web.js",
-    "ytdl-core": "^4.11.2"
+    "whatsapp-web.js": "github:Ftwrr/whatsapp-web.js"
   }
 }
